// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeTable decorator should render correctly - with data 1`] = `
<div
  className="pf-v6-c-treeview__control"
>
  <div
    className="pf-v6-c-treeview__control-text"
  >
    value
  </div>
</div>
`;

exports[`TreeTable decorator should render correctly - with data tree collapsed 1`] = `
<div
  className="pf-v6-c-treeview__control"
>
  <div
    className="pf-v6-c-treeview__toggle"
  >
    <Button
      icon={
        <AngleRightIcon
          aria-hidden="true"
          className="pf-v6-c-treeview__toggle-icon"
        />
      }
      onClick={[Function]}
      variant="plain"
    />
  </div>
  <div
    className="pf-v6-c-treeview__control-text"
  >
    value
  </div>
</div>
`;

exports[`TreeTable decorator should render correctly - with data tree opened 1`] = `
<div
  className="pf-v6-c-treeview__control"
>
  <div
    className="pf-v6-c-treeview__toggle"
  >
    <Button
      icon={
        <AngleRightIcon
          aria-hidden="true"
          className="pf-v6-c-treeview__toggle-icon"
        />
      }
      onClick={[Function]}
      variant="plain"
    />
  </div>
  <div
    className="pf-v6-c-treeview__control-text"
  >
    value
  </div>
</div>
`;
